# TripleBit

./: .travis.yml  CMakeLists.txt  Makefile  README.md
BuildTripleBitFromN3/: BuildTripleBit.cpp
BuildTripleBitFromRDF/: BuildTripleBit.cpp
TripleBit/: BitVectorWAH.cpp  BitVectorWAH.h  BitmapBuffer.cpp  BitmapBuffer.h  BitmapWAH.cpp  BitmapWAH.h  EntityIDBuffer.cpp  EntityIDBuffer.h  Hash.h  HashIndex.cpp  HashIndex.h  IRepository.h  LineHashIndex.cpp  LineHashIndex.h  MMapBuffer.cpp  MMapBuffer.h  MemoryBuffer.cpp  MemoryBuffer.h  MessageEngine.cpp  MessageEngine.h  OSFile.cpp  OSFile.h  ObjectPool.cpp  ObjectPool.h  PlanGenerator.cpp  PlanGenerator.h  PredicateTable.cpp  PredicateTable.h  QuerySemanticAnalysis.cpp  QuerySemanticAnalysis.h  RDFParser.cpp  RDFParser.h  RDFQuery.cpp  RDFQuery.h  SPARQLLexer.cpp  SPARQLLexer.h  SPARQLParser.cpp  SPARQLParser.h  Sorter.cpp  Sorter.h  (+24 more)
TripleBit/util/: BufferManager.cpp  BufferManager.h  FindEntityID.cpp  FindEntityID.h  HashJoin.cpp  HashJoin.h  SortMergeJoin.cpp  SortMergeJoin.h
TripleBitQuery/: TripleBitQuery.cpp
